# nasta

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
.vscode_old/: settings.json
components/common/: CMakeLists.txt  app_context.h  message_types.h  settings.h  settings_storage.cpp  types.h
components/common/test/: CMakeLists.txt  settings_storage_test.cpp  settings_test.cpp  settings_unit_test.cpp  utils_test.cpp
components/display/: display.cpp  display.h  led_matrix.cpp  led_matrix.h  matrix_animations.h  matrix_graphics.h
components/display/test/: display_unit_test.cpp
components/network_manager/: CMakeLists.txt  network_manager.cpp  network_manager.h  setup_portal.cpp
components/system_manager/: CMakeLists.txt  system_manager.cpp  system_manager.h
components/system_manager/test/: system_manager_host_integration_test.cpp
components/wifi_interface/: CMakeLists.txt  wifi_interface.cpp  wifi_interface.h
hardware/3d-print/: back_v.1.0.3mf  front_v.1.0.3mf
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  sdkconfig.defaults
test/main/: CMakeLists.txt  common_unit_tests_main.cpp  display_unit_tests_main.cpp  system_manager_host_integration_tests_main.cpp  test_app_main.cpp
